# agentspec

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
.cursor/rules/: agentspec.md
.github/: copilot-instructions.md
.windsurf/rules/: agentspec.md
agents/adr-creator/: agent.yaml  prompt.md
agents/prd-generator/: agent.yaml  prompt.md
prompts/: create-agent.md  create-skill.md  list-configs.md
scripts/: agentspec.sh
skills/jira-story-creator/: prompt.md  skill.yaml
src/agentspec_cli/: __init__.py  banner.py  commands.py  ide.py
templates/agent/: agent.yaml  prompt.md
templates/skill/: prompt.md  skill.yaml
tests/: test_cli.sh  test_commands.py  test_validate.sh
