[project]
name = "agentspec-cli"
version = "1.0.0"
description = "AgentSpec CLI - AI Agent Configuration Toolkit. Quickly create and manage agent configurations and skills."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "readchar",
    "pyyaml>=6.0",
]

[project.scripts]
agentspec = "agentspec_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentspec_cli"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
